--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
     "vitest": "^2.1.1"
   },
   "name": "date_utils_lib",
-  "version": "1.0.0",
-  "main": "index.js",
+  "version": "1.0.1",
+  "main": "src/index.js",
   "scripts": {
     "build": "npm run build:esm && npm run build:cjs",
     "build:esm": "tsc",
